# check_point_automation

./: .gitignore  MIGRATION_GUIDE.md  README.md  check_device_state.py  checkpoint_main.py  checkpoint_tasks.py  debug_clish_switch.py  debug_exit_output.py  debug_expert_password.py  pyproject.toml  pytest.ini  quick_script_test.py  requirements.txt  setup.py  test_connection.py  test_connection_manager.py  test_exit_methods.py  test_expert_access.py  test_expert_password_real.py  test_filename_preservation.py  test_real_device.py  test_reboot_handling.py  test_with_real_backup.py  test_wizard_setup.py  validate_netmiko_implementation.py
.kiro/specs/checkpoint-vm-automation/: design.md  requirements.md  tasks.md
_to_delete/: clean_implementation_summary.py  cli.py  implementation_comparison.py  manual_test_steps.py
_to_delete/scripts/: fw_backup_restore.py  fw_setup_vagrant.py
_to_delete/tests/: README.md  quick_test.py  test_binary_deployment.py  test_fw_connection.py  test_fw_set_expert_exit.py  unitest_command_execution.py  unitest_integration.py
checkpoint_automation/: __init__.py  command_executor.py  config.py  expert_password.py  script_deployment.py  ssh_connection.py
checkpoint_automation/backends/: __init__.py
checkpoint_automation/core/: __init__.py  connection.py  exceptions.py  interfaces.py  logging_config.py  models.py  utils.py
checkpoint_automation/modules/: __init__.py  initial_setup.py
checkpoint_utils/: __init__.py  cli.py  command_executor.py  config.py  expert_password.py  script_deployment.py  ssh_connection.py  tasks.py  user_management.py
config/: __init__.py  checkpoint_config.yaml
docs/: expert_password_setup.md  wizard_automation.md
examples/: admin_password_update_example.py  checkpoint_backup_restore.py  expert_password_setup.py  script_deployment_example.py  wizard_automation_example.py
ftw/: cli.config  ftw_cli_run.sh  r8120.config.template
scripts/: __init__.py  fw_set_expert.py  fw_setup_vagrant.py
tests/: __init__.py  quick_test.py  test_expert_password.py  test_fw_connection.py  test_fw_mode_detection.py  test_script_deployment.py  test_wizard_automation.py
tests/integration/: test_initial_setup_integration.py
tests/unit/: test_connection.py  test_exceptions.py  test_initial_setup.py  test_models.py
