[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "checkpoint-automation"
version = "0.1.0"
description = "A Python library for automating Check Point firewall configuration and management"
authors = [{name = "Check Point Automation Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "paramiko>=2.7.0",
]

[project.scripts]
checkpoint-set-expert = "scripts.fw_set_expert:main"

[tool.setuptools.packages.find]
include = ["checkpoint_automation*", "scripts*"]