[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "checkpoint-automation"
version = "0.1.0"
description = "A Python library for automating Check Point firewall configuration and management"
authors = [{name = "Check Point Automation Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "netmiko>=4.6.0",
]

[project.scripts]
cp_automate = "checkpoint_utils.cli:main"
checkpoint-set-expert = "scripts.fw_set_expert:main"

[tool.setuptools.packages.find]
include = ["checkpoint_utils*", "scripts*"]

[tool.ruff]
line-length = 120
lint.select = [
    "C4", # flake8-comprehensions
    "D", # pydocstyle
    "E", # pycodestyle
    "F", # Pyflakes
    "I", # isort
    "PL", # Pylint
    "SIM", # flake8-simplify
]

lint.fixable = ["ALL"]

lint.ignore = [
    # Missing docstring "D100" - "D107".
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D205", # 1 blank line required between summary line and description.
    "D202", # No blank lines allowed after function docstring.
    "D203", # Use a blank line to separate the docstring from the class definition.
    "D209", # Multi-line docstring closing quotes should be on a separate line.
    "D212", # Multi-line docstring summary should start at the first line.
    "D213", # Multi-line docstring summary should start at the second line.
    "D400", # First line should end with a period.
    "D401", # First line of docstring should be in imperative mood.
    "D406", # Section name should end with a newline.
    "D407", # Missing dashed underline after section.
    "D413", # Missing blank line after last section.
    "D415", # First line should end with a period, question mark, or exclamation point.
    # "E501", # Line too long
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments
    "PLR0915", # Too many statements
    "SIM115", # Use context handler for opening files
]
show-fixes = true
target-version = "py311"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".mypy_cache",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "_to_delete",  # Exclude our deprecated files folder
]